--- a/main.css
+++ b/main.css
@@ -17,13 +17,14 @@ body {
 display: block;
 width: auto;
 text-align: center;
-font-family: 'Gravitas One', cursive;
+font-family: 'Open Sans', sans-serif;
 height: 50px;
 font-size: 32px;
 margin: auto;
 }
 #results:hover {
-    transform:scale(1.1);
+    font-size: 48px;
+    cursor: pointer;
   }
   
 .male{
@@ -43,7 +44,7 @@ background: plum;
 button {
     border-radius: 15px;
     height: 80px;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'Abel', sans-serif;
     font-size: 2.5em;
     letter-spacing: 3px;
     text-align: center;
@@ -68,4 +69,5 @@ button:hover {
    height:60px;   /* Height of the footer */
    background:#6cf;
    text-align: center;
+   font-family: 'Abel', sans-serif;
 }
